# tongyong-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  USER.md  config.example.toml  docker-compose.yml  hello.html  index.html  pyproject.toml  render.yaml  story.txt  story_full.txt  黄河生态治理措施.html
.claude/: settings.local.json
None/: chroma.sqlite3
backend/: .env.example  .gitignore  langgraph_poc.py  langgraph_poc_mock.py  langgraph_poc_real.py  q1_test.py  q3a_test.py  requirements.txt  requirements_full.txt
backend/app/: __init__.py  config.py  lifespan.py  main.py  paths.py  startup.py
backend/data/: terminal_blacklist.txt  terminal_whitelist.txt
backend/public/: marketplace_registry.json
backend/tests/: test_agent_hooks.py  test_agent_hooks_e2e.py  test_debate_judge.py  test_debate_round_order.py  test_delegate_task.py  test_glob_and_load_skill.py  test_integration_skill_mcp.py  test_langchain_adapters.py  test_langchain_checkpoint.py  test_lifespan_skip_llm.py  test_mcp_client.py  test_mcp_lifespan.py  test_p13_must_use_tool.py  test_p14_ask_store.py  test_p22_register_explicit.py  test_p23_langchain_persistent.py  test_prompt_order.py  (+21 more)
docs/: AGENT_CAPABILITIES.md  AGENT_ENHANCEMENT.md  API.md  CODEGRAPH.md  CODE_REVIEW_2026_06_21.md  TRANSFORMATION_PLAN.md  agent-memory-system-design.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
notes/: README.md  getting-started.md  inbox.md  todo.md
scripts/: dev-down.sh  dev-status.sh  dev-up.sh  dev-watchdog.sh
(+327 files in other folders)
